[package]
name = "bomba-rmy"
version = "0.1.0"
authors = ["Quentin Baradat", "Titouan Nicolo"]

description = "server"
repository = "https://github.com/scoffingcoffinstudio/bomba-rmy"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
rocket = "0.3.3"
rocket_codegen = "0.3.3"
socket-io = "0.1.1"
